--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <img src="/imgs/geek.png" alt="logo" />
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <div id="hero-section">
+      <div id="hero-content">
+        <h1>Welcome to my Landing page</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit,
+          cupiditate doloremque. Officiis ex soluta totam ea quisquam provident
+          maiores perspiciatis.
+        </p>
+        <button>Sign Up</button>
+      </div>
+      <img src="#" alt="" />
+    </div>
+
+    <div id="section-1">
+      <h2>Some random information.</h2>
+      <div class="col-4 card">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          enim.
+        </p>
+      </div>
+      <div class="col-4 card">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          enim.
+        </p>
+      </div>
+      <div class="col-4 card">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          enim.
+        </p>
+      </div>
+      <div class="col-4 card">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          enim.
+        </p>
+      </div>
+    </div>
+
+    <div id="section-2">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus atque
+        facere quibusdam consequuntur, nobis deleniti quasi. Totam, esse
+        adipisci tenetur cupiditate consequatur quibusdam quam earum officia,
+        accusantium maiores molestias ex.
+      </p>
+      <p>-Thor, God of Thunder</p>
+    </div>
+
+    <div id="section-3">
+      <div id="cta-container">
+        <div id="cta-content">
+          <h4>Call to action! It's Time!!</h4>
+          <p>
+            Sign Up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button>Sign Up</button>
+      </div>
+    </div>
+
+    <footer>
+        <p>Copyright &copy; The Odin Project 2025!</p>
+    </footer>
+  </body>
 </html>
